# PdfDownloader

./: .gitignore  Dockerfile  README.md  docker-compose.yml  finalized_guideline_slice.json  pyproject.toml
backend/: config.py  main.py
backend/api/: models.py
backend/api/endpoints/: pdf_routes.py
backend/services/: pdf_service.py
backend/utils/: file_utils.py  http_client.py
frontend/: README.md  __init__.py  api_client.py  app.py  config.py
frontend/.streamlit/: config.toml
frontend/components/: __init__.py  results_display.py  ui_components.py
frontend/config/: __init__.py
frontend/styles/: __init__.py  styles.py
frontend/utils/: __init__.py  api_client.py  test_api_client.py
